--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Nero — Portfolio</title>
-  <meta name="description" content="Personal portfolio — Nero, CS student" />
+  <meta name="description" content="Personal portfolio — Nero Minh, CS student" />
 
   <!-- Simple, clean CSS baseline -->
   <style>
@@ -125,7 +125,7 @@
     <main>
       <section id="home" class="hero">
         <div>
-          <h1 class="title">Hi — I'm Nero</h1>
+          <h1 class="title">Hi — I'm Nero Minh, my real name is Nguyen Duy Minh</h1>
           <p class="subtitle">Second-year Computer Science student. I build small web apps and learn machine learning. This site will show projects I make.</p>
           <div style="margin-top:.9rem">
             <a class="btn" href="#projects">See projects</a>
@@ -134,8 +134,8 @@
         <div class="card">
           <p style="margin:0"><strong>Quick facts</strong></p>
           <ul style="margin:.6rem 0 .1rem 1.1rem;color:var(--muted)">
-            <li>Languages: Java, Python, JavaScript</li>
-            <li>Stack: HTML/CSS, React (learning)</li>
+            <li>Languages: Java, Python, JavaScript (learning)</li>
+            <li>Stack: HTML/CSS</li>
             <li>Location: Vietnam</li>
           </ul>
         </div>
@@ -143,7 +143,7 @@
 
       <section id="about" style="margin-top:1rem" class="card">
         <h3 style="margin:0 0 .35rem 0">About me</h3>
-        <p class="muted">Short paragraph that explains who you are, what you study, and what type of projects you're interested in. Keep this 2–4 lines long.</p>
+        <p class="muted">I am a second year CS student studying in Vinuniversity. I am quite assamed that I started doing personal project sooo late, however, I am trying my best to catch up and begin my first hands-on project that uses github repo and basic HTML to gain experience</p>
       </section>
 
       <section id="projects" style="margin-top:1rem">
@@ -151,7 +151,7 @@
         <div class="projects">
           <!-- Example project card. Copy / paste to add more -->
           <article class="project-card">
-            <h4>Project Title</h4>
+            <h4>Personal Portfolio</h4>
             <p class="muted">Short one-line description. Technologies used: HTML, CSS, JS.</p>
             <div style="margin-top:.6rem">
               <a class="btn" href="#">View code</a>
@@ -167,11 +167,11 @@
 
       <section id="contact" style="margin-top:1rem" class="card">
         <h3 style="margin:0 0 .35rem 0">Contact</h3>
-        <p class="muted">Email: <a href="mailto:you@example.com">you@example.com</a> • GitHub: <a href="https://github.com/YOUR_USERNAME" target="_blank">@YOUR_USERNAME</a></p>
+        <p class="muted">Email: <a href="mailto:you@example.com">duyminh20170843@gmail.com</a> • GitHub: <a href="https://github.com/nerominh" target="_blank">@nerominh</a></p>
       </section>
 
       <footer>
-        Built with ❤️ — Replace content and add projects as you go.
+        First time doing the thing :>
       </footer>
     </main>
   </div>
