This is my second commit

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <section id="home" class="hero">
         <div>
           <h1 class="title">Hi — I'm Nero Minh, my real name is Nguyen Duy Minh</h1>
-          <p class="subtitle">Second-year Computer Science student. I build small web apps and learn machine learning. This site will show projects I make.</p>
+          <p class="subtitle">Second-year Computer Science student. I build this small web apps and learn machine learning. This site will show projects I make.</p>
           <div style="margin-top:.9rem">
             <a class="btn" href="#projects">See projects</a>
           </div>
