--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
       <button class="btn">Send Message</button>
     </form>
 
-    <a href="index.html" class="back">← Back to Home</a>
+    <a href="main.html" class="back">← Back to Home</a>
   </div>
 </body>
 </head>
