--- a/main.html
+++ b/main.html
@@ -102,7 +102,7 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">N</div>
+        <div class="logo">Nẻo</div>
         <div>
           <div style="font-weight:700">Nero</div>
           <div class="muted" style="font-size:.9rem">Second-year CS • Portfolio</div>
@@ -113,7 +113,7 @@
         <button class="menu-toggle" aria-expanded="false" id="menuBtn">☰</button>
         <nav>
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home">Main Page</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
